--- a/index.html
+++ b/index.html
@@ -10,6 +10,18 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
         integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link rel="icon" type="image/x-icon" href="assets/images/favicon.png">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/solid.min.css"
+        integrity="sha512-qzgHTQ60z8RJitD5a28/c47in6WlHGuyRvMusdnuWWBB6fZ0DWG/KyfchGSBlLVeqAz+1LzNq+gGZkCSHnSd3g=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
+        integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/fontawesome.min.css"
+        integrity="sha512-xX2rYBFJSj86W54Fyv1de80DWBq7zYLn2z0I9bIhQG+rxIF6XVJUpdGnsNHWRa6AvP89vtFupEPDP8eZAtu9qA=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/regular.min.css"
+        integrity="sha512-YoxvmIzlVlt4nYJ6QwBqDzFc+2aXL7yQwkAuscf2ZAg7daNQxlgQHV+LLRHnRXFWPHRvXhJuBBjQqHAqRFkcVw=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="assets/css/style.css">
     <title>Salve Dou</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
@@ -337,6 +349,61 @@
         </div>
     </div>
 
+
+
+    <!-- Contact us start here -->
+
+    <div class="container mt-3">
+        <div class="contact_form">
+            <h1 class="contact_heading text-center">Contact Us</h1>
+            <div class="row">
+                <div class="col-lg-6 col-md-6">
+                    <img src="assets/images/contact.png" alt="" class="contact_img">
+
+                    <div class="form">
+                        <div class="form-group">
+                            <span><i class="fa fa-user" aria-hidden="true"></i> </span>
+
+                            <input type="text" class="form-control" id="name" aria-describedby="nameHelp"
+                                placeholder="Name">
+
+                        </div>
+                        <div class="form-group">
+                            <span><i class="fa fa-envelope" aria-hidden="true"></i> </span>
+                            <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="Email">
+                        </div>
+                        <div class="form-group">
+                            <span><i class="fa fa-phone" aria-hidden="true"></i> </span>
+                            <input type="phoneNumber" class="form-control" id="phoneNumber" placeholder="Phone">
+                        </div>
+
+
+                        <div class="form-group">
+                            <span><i class="fa fa-pencil"></i> </span>
+                            <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"
+                                placeholder="Message"></textarea>
+                        </div>
+                        <div class="text-center">
+
+                            <button>Submit</button>
+                        </div>
+                    </div>
+
+                </div>
+                <div class="col-lg-6 col-md-6">
+
+                    <div class="responsive-map">
+                        <iframe
+                            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d13745.581063717123!2d75.95196518019654!3d30.53813470728428!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x391069a660696aef%3A0x3bc789e57615106b!2sChandigarh%2C%20Punjab%20148023!5e0!3m2!1sen!2sin!4v1652896457442!5m2!1sen!2sin"
+                            width="550" height="395" style="border:0;" allowfullscreen="" loading="lazy"
+                            referrerpolicy="no-referrer-when-downgrade"></iframe>
+                    </div>
+
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- Contact us end here -->
 
 
 
