--- a/index.html
+++ b/index.html
@@ -192,161 +192,167 @@
 
 
     <div class="container ">
-        <div class="row about_section">
-            <div class="col-lg-7 col-md-7">
-                <div class="separator">
+        <div class="about_section">
+            <div class="row ">
+                <div class="col-lg-7 col-md-7">
+                    <div class="separator">
 
-                    <h3>Benvenuti al</h3>
-                    <div class="line"></div>
+                        <h3>Benvenuti al</h3>
+                        <div class="line"></div>
+                    </div>
+                    <h2>Ristorante e Pizzeria Salve D'or</h2>
+                    <p class="p1">Small culinary monument, settled in one of the most beautiful city in New Zealand,
+                        Tauranga. Here you
+                        can
+                        enjoy Mediterranean and European specialties like "Anelli di Calamari"; "Gamberi Saporiti";
+                        "Bistecca
+                        Mignon"; "Lasagne tradizionale al forno" and many other recipes expertly prepared, respecting
+                        the
+                        authenticity and freshness of the ingredients used.
+                        <br>
+                    </p>
+                    <p class="p2"> The Restaurant furnished with antique ornaments evoking pleasant memories of another
+                        time, makes the
+                        atmosphere even more enchanting, a perfect setting for candlelit dinners and "a la carte"
+                        menu.<br>
+
+                    </p>
+                    <p class="p3"> The Restaurant offers excellent selection of Italian wines and personalized menu for
+                        adults and
+                        children. All combined with the typical Mediterranean hospitality, warm and attentive, makes
+                        Salva
+                        D'or a welcoming and hospitable place, ideal for your winter or summer dine in and takeaway
+                        evenings. </p>
+
                 </div>
-                <h2>Ristorante e Pizzeria Salve D'or</h2>
-                <p class="p1">Small culinary monument, settled in one of the most beautiful city in New Zealand,
-                    Tauranga. Here you
-                    can
-                    enjoy Mediterranean and European specialties like "Anelli di Calamari"; "Gamberi Saporiti";
-                    "Bistecca
-                    Mignon"; "Lasagne tradizionale al forno" and many other recipes expertly prepared, respecting
-                    the
-                    authenticity and freshness of the ingredients used.
-                    <br>
-                </p>
-                <p class="p2"> The Restaurant furnished with antique ornaments evoking pleasant memories of another
-                    time, makes the
-                    atmosphere even more enchanting, a perfect setting for candlelit dinners and "a la carte"
-                    menu.<br>
+                <div class="col-lg-5 col-md-5">
+                    <div class="about_img">
 
-                </p>
-                <p class="p3"> The Restaurant offers excellent selection of Italian wines and personalized menu for
-                    adults and
-                    children. All combined with the typical Mediterranean hospitality, warm and attentive, makes
-                    Salva
-                    D'or a welcoming and hospitable place, ideal for your winter or summer dine in and takeaway
-                    evenings. </p>
-
-            </div>
-            <div class="col-lg-5 col-md-5">
-                <div class="about_img">
-
-                    <img src="assets/images/about-pic.png" alt="">
+                        <img src="assets/images/about-pic.png" alt="">
+                    </div>
                 </div>
             </div>
+            <!-- About us end here -->
+
         </div>
-        <!-- About us end here -->
-
-
 
 
     </div>
+    <div class="bg_gray">
 
-    <div class="menu_section">
+
+
         <div class="container">
+            <div class="menu_section">
 
-            <div class="our_menu">
+                <div class="our_menu">
 
-                <div class="menu_heading">
+                    <div class="menu_heading">
 
-                    <h1>Our Menus</h1>
-                </div>
+                        <h1>Our Menus</h1>
+                    </div>
 
-                <div class="row">
-                    <div class="col-lg-4">
-                        <div class="left_menu">
+                    <div class="row">
+                        <div class="col-lg-4">
+                            <div class="left_menu">
 
 
-                            <img src="assets/images/antipasti.png" alt="" srcset="">
-                            <div class="menu_footer ">
-                                <div class="row">
+                                <img src="assets/images/antipasti.png" alt="" srcset="">
+                                <div class="menu_footer1 ">
+                                    <div class="row">
+                                        <div class="col-10">
+                                            <p class="title">
+                                                Antipasti e Insalate
+                                            </p>
+                                        </div>
+                                        <div class="col-2">
+                                            <div class="arrow_div">
+                                                <img src="assets/images/arrow1.png" class="arrow" alt="">
+                                            </div>
+                                        </div>
+                                    </div>
+
+
+                                </div>
+                            </div>
+
+                        </div>
+
+                        <div class="col-lg-4">
+                            <div class="first_menu">
+                                <img src="assets/images/pasta.png" alt="" srcset="">
+                                <div class="menu_footer ">
                                     <div class="col-10">
+
                                         <p class="title">
-                                            Antipasti e Insalate
+                                            Pasta e Risotto
                                         </p>
                                     </div>
                                     <div class="col-2">
                                         <div class="arrow_div">
-                                            <img src="assets/images/arrow1.png" class="arrow" alt="">
+                                            <img src="assets/images/arrow1.png" class="arrow1" alt="">
                                         </div>
                                     </div>
                                 </div>
+                            </div>
+                            <div class="second_menu">
+                                <img src="assets/images/secondi.png" alt="" srcset="">
+                                <div class="menu_footer ">
+                                    <div class="col-10">
 
+                                        <p class="title">
+                                            Secondi Piatti
+                                        </p>
+                                    </div>
+                                    <div class="col-2">
+                                        <div class="arrow_div">
+                                            <img src="assets/images/arrow1.png" class="arrow1" alt="">
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
 
+                        <div class="col-lg-4">
+                            <div class="first_menu">
+                                <img src="assets/images/pizza.png" alt="" srcset="">
+                                <div class="menu_footer ">
+                                    <div class="col-10">
+
+                                        <p class="title">
+                                            Pizza
+                                        </p>
+                                    </div>
+                                    <div class="col-2">
+                                        <div class="arrow_div">
+                                            <img src="assets/images/arrow1.png" class="arrow1" alt="">
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="second_menu">
+                                <img src="assets/images/dolci.png" alt="" srcset="">
+                                <div class="menu_footer ">
+                                    <div class="col-10">
+
+                                        <p class="title">
+                                            Dolci
+                                        </p>
+                                    </div>
+                                    <div class="col-2">
+                                        <div class="arrow_div">
+                                            <img src="assets/images/arrow1.png" class="arrow1" alt="">
+                                        </div>
+                                    </div>
+                                </div>
                             </div>
                         </div>
 
                     </div>
-
-                    <div class="col-lg-4">
-                        <div class="first_menu">
-                            <img src="assets/images/pasta.png" alt="" srcset="">
-                            <div class="menu_footer ">
-                                <div class="col-10">
-
-                                    <p class="title">
-                                        Pasta e Risotto
-                                    </p>
-                                </div>
-                                <div class="col-2">
-                                    <div class="arrow_div">
-                                        <img src="assets/images/arrow1.png" class="arrow1" alt="">
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="second_menu">
-                            <img src="assets/images/secondi.png" alt="" srcset="">
-                            <div class="menu_footer ">
-                                <div class="col-10">
-
-                                    <p class="title">
-                                        Secondi Piatti
-                                    </p>
-                                </div>
-                                <div class="col-2">
-                                    <div class="arrow_div">
-                                        <img src="assets/images/arrow1.png" class="arrow1" alt="">
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="col-lg-4">
-                        <div class="first_menu">
-                            <img src="assets/images/pizza.png" alt="" srcset="">
-                            <div class="menu_footer ">
-                                <div class="col-10">
-
-                                    <p class="title">
-                                        Pizza
-                                    </p>
-                                </div>
-                                <div class="col-2">
-                                    <div class="arrow_div">
-                                        <img src="assets/images/arrow1.png" class="arrow1" alt="">
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="second_menu">
-                            <img src="assets/images/dolci.png" alt="" srcset="">
-                            <div class="menu_footer ">
-                                <div class="col-10">
-
-                                    <p class="title">
-                                        Dolci
-                                    </p>
-                                </div>
-                                <div class="col-2">
-                                    <div class="arrow_div">
-                                        <img src="assets/images/arrow1.png" class="arrow1" alt="">
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-
                 </div>
             </div>
         </div>
+
     </div>
 
 
