--- a/index.html
+++ b/index.html
@@ -89,11 +89,11 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <div class="container">
                 <ul class="navbar-nav mr-auto">
-                    <li class="nav-item active">
-                        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+                    <li class="nav-item ">
+                        <a class="nav-link active" href="#">Home <span class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">About Us</a>
+                        <a class="nav-link " href="#">About Us</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">Find Us</a>
@@ -251,108 +251,110 @@
 
                         <h1>Our Menus</h1>
                     </div>
-
-                    <div class="row">
-                        <div class="col-lg-4">
-                            <div class="left_menu">
+                    <div class="pb-5">
 
 
-                                <img src="assets/images/antipasti.png" alt="" srcset="">
-                                <div class="menu_footer1 ">
-                                    <div class="row">
+                        <div class="row">
+                            <div class="col-lg-4">
+                                <div class="left_menu">
+
+
+                                    <img src="assets/images/antipasti.png" alt="" srcset="">
+                                    <div class="menu_footer1 ">
+                                        <div class="row">
+                                            <div class="col-10">
+                                                <p class="title">
+                                                    Antipasti e Insalate
+                                                </p>
+                                            </div>
+                                            <div class="col-2">
+                                                <div class="arrow_div">
+                                                    <img src="assets/images/arrow1.png" class="arrow" alt="">
+                                                </div>
+                                            </div>
+                                        </div>
+
+
+                                    </div>
+                                </div>
+
+                            </div>
+
+                            <div class="col-lg-4">
+                                <div class="first_menu">
+                                    <img src="assets/images/pasta.png" alt="" srcset="">
+                                    <div class="menu_footer ">
                                         <div class="col-10">
+
                                             <p class="title">
-                                                Antipasti e Insalate
+                                                Pasta e Risotto
                                             </p>
                                         </div>
                                         <div class="col-2">
                                             <div class="arrow_div">
-                                                <img src="assets/images/arrow1.png" class="arrow" alt="">
+                                                <img src="assets/images/arrow1.png" class="arrow1" alt="">
                                             </div>
                                         </div>
                                     </div>
+                                </div>
+                                <div class="second_menu">
+                                    <img src="assets/images/secondi.png" alt="" srcset="">
+                                    <div class="menu_footer ">
+                                        <div class="col-10">
 
+                                            <p class="title">
+                                                Secondi Piatti
+                                            </p>
+                                        </div>
+                                        <div class="col-2">
+                                            <div class="arrow_div">
+                                                <img src="assets/images/arrow1.png" class="arrow1" alt="">
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
 
+                            <div class="col-lg-4">
+                                <div class="first_menu">
+                                    <img src="assets/images/pizza.png" alt="" srcset="">
+                                    <div class="menu_footer ">
+                                        <div class="col-10">
+
+                                            <p class="title">
+                                                Pizza
+                                            </p>
+                                        </div>
+                                        <div class="col-2">
+                                            <div class="arrow_div">
+                                                <img src="assets/images/arrow1.png" class="arrow1" alt="">
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="second_menu">
+                                    <img src="assets/images/dolci.png" alt="" srcset="">
+                                    <div class="menu_footer ">
+                                        <div class="col-10">
+
+                                            <p class="title">
+                                                Dolci
+                                            </p>
+                                        </div>
+                                        <div class="col-2">
+                                            <div class="arrow_div">
+                                                <img src="assets/images/arrow1.png" class="arrow1" alt="">
+                                            </div>
+                                        </div>
+                                    </div>
                                 </div>
                             </div>
 
                         </div>
-
-                        <div class="col-lg-4">
-                            <div class="first_menu">
-                                <img src="assets/images/pasta.png" alt="" srcset="">
-                                <div class="menu_footer ">
-                                    <div class="col-10">
-
-                                        <p class="title">
-                                            Pasta e Risotto
-                                        </p>
-                                    </div>
-                                    <div class="col-2">
-                                        <div class="arrow_div">
-                                            <img src="assets/images/arrow1.png" class="arrow1" alt="">
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="second_menu">
-                                <img src="assets/images/secondi.png" alt="" srcset="">
-                                <div class="menu_footer ">
-                                    <div class="col-10">
-
-                                        <p class="title">
-                                            Secondi Piatti
-                                        </p>
-                                    </div>
-                                    <div class="col-2">
-                                        <div class="arrow_div">
-                                            <img src="assets/images/arrow1.png" class="arrow1" alt="">
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-
-                        <div class="col-lg-4">
-                            <div class="first_menu">
-                                <img src="assets/images/pizza.png" alt="" srcset="">
-                                <div class="menu_footer ">
-                                    <div class="col-10">
-
-                                        <p class="title">
-                                            Pizza
-                                        </p>
-                                    </div>
-                                    <div class="col-2">
-                                        <div class="arrow_div">
-                                            <img src="assets/images/arrow1.png" class="arrow1" alt="">
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="second_menu">
-                                <img src="assets/images/dolci.png" alt="" srcset="">
-                                <div class="menu_footer ">
-                                    <div class="col-10">
-
-                                        <p class="title">
-                                            Dolci
-                                        </p>
-                                    </div>
-                                    <div class="col-2">
-                                        <div class="arrow_div">
-                                            <img src="assets/images/arrow1.png" class="arrow1" alt="">
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-
                     </div>
                 </div>
             </div>
         </div>
-
     </div>
 
 
@@ -434,61 +436,7 @@
         integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
         crossorigin="anonymous"></script>
 
-    <script>
-        $(document).ready(function () {
-            simpleCarousel($(".simple-carousel"), 5000);
-        });
-
-        function simpleCarousel(carousel, intervalTime = 5000) {
-            var slideCount = $(carousel).find("ul li.slide").length;
-            var activeSlide = 0;
-
-            function showSlide() {
-                $(carousel)
-                    .find("ul li.slide")
-                    .each(function (index) {
-                        if (index == activeSlide) {
-                            $(this).fadeIn();
-                        } else {
-                            $(this).fadeOut();
-                        }
-                    });
-            }
-
-            setInterval(function () {
-                moveRight();
-            }, intervalTime);
-
-            function moveLeft() {
-                activeSlide -= 1;
-                if (activeSlide < 0) {
-                    activeSlide = slideCount - 1;
-                }
-                showSlide();
-            }
-
-            function moveRight() {
-                activeSlide += 1;
-                if (activeSlide >= slideCount) {
-                    activeSlide = 0;
-                }
-                showSlide();
-            }
-
-            $(carousel)
-                .find("a.control_prev")
-                .click(function () {
-                    moveLeft();
-                });
-
-            $(carousel)
-                .find("a.control_next")
-                .click(function () {
-                    moveRight();
-                });
-        }
-
-    </script>
+    <script src="assets/js/custom.js"></script>
 </body>
 
 </html>
