--- a/index.html
+++ b/index.html
@@ -569,13 +569,181 @@
 
     <!-- Testimonials end here  -->
 
+    <!-- Reviews start here -->
+
+    <div class="top_review">
+      <img
+        class="top_review_patti"
+        src="assets/images/topreview-patti.png"
+        alt=""
+        srcset=""
+      />
+      <div class="top_review_inner">
+        <div class="review_content">
+          <img src="assets/images/topreview-logo.png" alt="" srcset="" />
+          <a
+            href="https://www.topreviews.co.nz/best-italian-restaurants-tauranga/"
+            target="_blank"
+          >
+            https://www.topreviews.co.nz/best-italian-restaurants-tauranga/
+          </a>
+        </div>
+      </div>
+    </div>
+
+    <!-- Reviews end here -->
+
+    <!-- Gallery start here  -->
+
+    <div class="gallery">
+      <div class="container">
+        <div class="gallery_heading">
+          <h1>Gallery</h1>
+        </div>
+
+        <div class="gallery_section">
+          <div class="row">
+            <div class="col-lg-3 col-md-3">
+              <img src="assets/images/pic-1.png" alt="" />
+            </div>
+            <div class="col-lg-3 col-md-3">
+              <img src="assets/images/pic-2.png" alt="" />
+            </div>
+            <div class="col-lg-3 col-md-3">
+              <img src="assets/images/pic-3.png" alt="" />
+            </div>
+            <div class="col-lg-3 col-md-3">
+              <img src="assets/images/pic-4.png" alt="" />
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-lg-3 col-md-3 gallery_bottom_img">
+              <img src="assets/images/pic-5.png" alt="" />
+            </div>
+            <div class="col-lg-3 col-md-3 gallery_center_img">
+              <img src="assets/images/pic-6.png" alt="" />
+            </div>
+            <div class="col-lg-3 col-md-3 gallery_bottom_img">
+              <img src="assets/images/pic-7.png " alt="" />
+            </div>
+            <div class="col-lg-3 col-md-3 gallery_center_img">
+              <img src="assets/images/pic-8.png" alt="" />
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- Gallery end here  -->
+
     <!-- Footer start -->
 
-    <!-- 
-    <footer class="container">
-        <p class="float-right"><a href="#">Back to top</a></p>
-        <p>&copy; 2022 Company, Inc. &middot; <a href="#">Privacy</a> &middot; <a href="#">Terms</a></p>
-    </footer> -->
+    <div class="footer_section">
+      <footer class="container">
+        <div class="row">
+          <div class="col-lg-4 col-md-4">
+            <span class="line"></span>
+            <p class="footer_heading">Links</p>
+            <div class="row">
+              <div class="col-lg-6 col-md-6">
+                <ul>
+                  <li>
+                    <span class="mr-2"
+                      ><i class="fa-thin fa-less-than"></i></span
+                    ><a href="#home">Home</a>
+                  </li>
+                  <li>
+                    <span class="mr-2"
+                      ><i class="fa-thin fa-less-than"></i></span
+                    ><a href="#home">About Us</a>
+                  </li>
+                  <li>
+                    <span class="mr-2"
+                      ><i class="fa-thin fa-less-than"></i></span
+                    ><a href="#home">Find Us</a>
+                  </li>
+                  <li>
+                    <span class="mr-2"
+                      ><i class="fa-thin fa-less-than"></i></span
+                    ><a href="#home">Menus</a>
+                  </li>
+                </ul>
+              </div>
+              <div class="col-lg-6 col-md-6">
+                <ul>
+                  <li>
+                    <span class="mr-2"
+                      ><i class="fa-thin fa-less-than"></i></span
+                    ><a href="#home">Gallery</a>
+                  </li>
+                  <li>
+                    <span class="mr-2"
+                      ><i class="fa-thin fa-less-than"></i></span
+                    ><a href="#home">Contact Us</a>
+                  </li>
+                </ul>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-3 col-md-3">
+            <span class="line"></span>
+            <p class="footer_heading">Address</p>
+            <div class="row">
+              <div class="col-lg-1.5 col-md-1.5">
+                <i class="fa-solid fa-location-dot ml-3"></i>
+              </div>
+              <div class="col-lg-10 col-md-10">
+                <p class="address_details">
+                  Salva D'or Italian Restaurant & Pizzeria 350 Cameron Road,
+                  Tauranga 3110, New Zealand
+                </p>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-3 col-md-3">
+            <span class="line"></span>
+            <p class="footer_heading">Contact Us</p>
+            <div class="row">
+              <div class="col-lg-12 col-md-12" style="line-height: 0px">
+                <p class="number">
+                  <span> <i class="fa-solid fa-phone-volume mr-2"></i></span>
+                  075788000
+                </p>
+              </div>
+              <div class="col-lg-12">
+                <p class="email">
+                  <span>
+                    <i class="fa-solid fa-envelope mr-2"></i>
+                  </span>
+
+                  restaurant@salvador.co.nz
+                </p>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-2 col-md-2">
+            <span class="line"></span>
+            <p class="footer_heading">Opening Hours</p>
+            <div class="row">
+              <div class="col-12" style="line-height: 0px">
+                <p class="opening_days">Tuesday-Sunday</p>
+              </div>
+              <div class="col-12">
+                <p class="opening_timing">5:00pm - Till Late</p>
+              </div>
+              <div class="col-12">
+                <p class="close_day">Monday-Closed</p>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <p>
+          &copy; 2022 Company, Inc. &middot; <a href="#">Privacy</a> &middot;
+          <a href="#">Terms</a>
+        </p>
+      </footer>
+    </div>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
