--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
       name="viewport"
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
-
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <!-- Bootstrap CSS -->
     <link
       rel="stylesheet"
@@ -243,7 +243,7 @@
 
     <!-- About us start here -->
 
-    <div class="container">
+    <div class="container" data-aos="fade-up" data-aos-duration="700">
       <div class="about_section">
         <div class="row">
           <div class="col-lg-7 col-md-7">
@@ -642,82 +642,88 @@
       <footer class="container">
         <div class="row">
           <div class="col-lg-4 col-md-4">
-            <span class="line"></span>
-            <p class="footer_heading">Links</p>
-            <div class="row">
-              <div class="col-lg-6 col-md-6">
-                <ul>
-                  <li>
-                    <span class="mr-2"
-                      ><i class="fa-thin fa-less-than"></i></span
-                    ><a href="#home">Home</a>
-                  </li>
-                  <li>
-                    <span class="mr-2"
-                      ><i class="fa-thin fa-less-than"></i></span
-                    ><a href="#home">About Us</a>
-                  </li>
-                  <li>
-                    <span class="mr-2"
-                      ><i class="fa-thin fa-less-than"></i></span
-                    ><a href="#home">Find Us</a>
-                  </li>
-                  <li>
-                    <span class="mr-2"
-                      ><i class="fa-thin fa-less-than"></i></span
-                    ><a href="#home">Menus</a>
-                  </li>
-                </ul>
-              </div>
-              <div class="col-lg-6 col-md-6">
-                <ul>
-                  <li>
-                    <span class="mr-2"
-                      ><i class="fa-thin fa-less-than"></i></span
-                    ><a href="#home">Gallery</a>
-                  </li>
-                  <li>
-                    <span class="mr-2"
-                      ><i class="fa-thin fa-less-than"></i></span
-                    ><a href="#home">Contact Us</a>
-                  </li>
-                </ul>
-              </div>
-            </div>
-          </div>
-          <div class="col-lg-3 col-md-3">
-            <span class="line"></span>
-            <p class="footer_heading">Address</p>
-            <div class="row">
-              <div class="col-lg-1.5 col-md-1.5">
-                <i class="fa-solid fa-location-dot ml-3"></i>
-              </div>
-              <div class="col-lg-10 col-md-10">
-                <p class="address_details">
-                  Salva D'or Italian Restaurant & Pizzeria 350 Cameron Road,
-                  Tauranga 3110, New Zealand
-                </p>
+            <div class="vertical_line">
+              <span class="line"></span>
+              <p class="footer_heading">Links</p>
+              <div class="row">
+                <div class="col-lg-6 col-md-6">
+                  <ul>
+                    <li>
+                      <span class="mr-2"
+                        ><i class="fa-thin fa-greater-than"></i></span
+                      ><a href="#home">Home</a>
+                    </li>
+                    <li>
+                      <span class="mr-2"
+                        ><i class="fa-thin fa-greater-than"></i></span
+                      ><a href="#home">About Us</a>
+                    </li>
+                    <li>
+                      <span class="mr-2"
+                        ><i class="fa-thin fa-greater-than"></i></span
+                      ><a href="#home">Find Us</a>
+                    </li>
+                    <li>
+                      <span class="mr-2"
+                        ><i class="fa-thin fa-greater-than"></i></span
+                      ><a href="#home">Menus</a>
+                    </li>
+                  </ul>
+                </div>
+                <div class="col-lg-6 col-md-6">
+                  <ul>
+                    <li>
+                      <span class="mr-2"
+                        ><i class="fa-thin fa-greater-than"></i></span
+                      ><a href="#home">Gallery</a>
+                    </li>
+                    <li>
+                      <span class="mr-2"
+                        ><i class="fa-thin fa-greater-than"></i></span
+                      ><a href="#home">Contact Us</a>
+                    </li>
+                  </ul>
+                </div>
               </div>
             </div>
           </div>
           <div class="col-lg-3 col-md-3">
-            <span class="line"></span>
-            <p class="footer_heading">Contact Us</p>
-            <div class="row">
-              <div class="col-lg-12 col-md-12" style="line-height: 0px">
-                <p class="number">
-                  <span> <i class="fa-solid fa-phone-volume mr-2"></i></span>
-                  075788000
-                </p>
+            <div class="vertical_line">
+              <span class="line"></span>
+              <p class="footer_heading">Address</p>
+              <div class="row">
+                <div class="col-lg-1.5 col-md-1.5">
+                  <i class="fa-solid fa-location-dot ml-3"></i>
+                </div>
+                <div class="col-lg-10 col-md-10">
+                  <p class="address_details">
+                    Salva D'or Italian Restaurant & Pizzeria 350 Cameron Road,
+                    Tauranga 3110, New Zealand
+                  </p>
+                </div>
               </div>
-              <div class="col-lg-12">
-                <p class="email">
-                  <span>
-                    <i class="fa-solid fa-envelope mr-2"></i>
-                  </span>
+            </div>
+          </div>
+          <div class="col-lg-3 col-md-3">
+            <div class="vertical_line">
+              <span class="line"></span>
+              <p class="footer_heading">Contact Us</p>
+              <div class="row">
+                <div class="col-lg-12 col-md-12" style="line-height: 0px">
+                  <p class="number">
+                    <span> <i class="fa-solid fa-phone-volume mr-2"></i></span>
+                    075788000
+                  </p>
+                </div>
+                <div class="col-lg-12">
+                  <p class="email">
+                    <span>
+                      <i class="fa-solid fa-envelope mr-2"></i>
+                    </span>
 
-                  restaurant@salvador.co.nz
-                </p>
+                    restaurant@salvador.co.nz
+                  </p>
+                </div>
               </div>
             </div>
           </div>
@@ -737,10 +743,11 @@
             </div>
           </div>
         </div>
+        <div class="hr_line"></div>
 
         <p>
-          &copy; 2022 Company, Inc. &middot; <a href="#">Privacy</a> &middot;
-          <a href="#">Terms</a>
+          Copyright &copy; 2022 Salva D'or Ristorante Italiano. All Rights
+          Reserved
         </p>
       </footer>
     </div>
@@ -776,6 +783,11 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     ></script>
+
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+    <script>
+      AOS.init();
+    </script>
 
     <script src="assets/js/custom.js"></script>
   </body>
