--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
         <div class="container">
           <ul class="navbar-nav mr-auto">
             <li class="nav-item">
-              <a class="nav-link active" href="#"
+              <a class="nav-link active" href="/index.html"
                 >Home <span class="sr-only">(current)</span></a
               >
             </li>
@@ -138,7 +138,7 @@
               <a class="nav-link" href="#">Find Us</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Menus</a>
+              <a class="nav-link" href="/menu.html">Menus</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#">Gallery</a>
