--- a/menu.html
+++ b/menu.html
@@ -131,7 +131,7 @@
 
 
 
-    <!-- right menu list -->
+    <!-- right menu list 1st -->
 
     <section>
         <div class="row">
@@ -143,30 +143,239 @@
 
                 <div class="row">
 
-                    <div class="col-3">
+                    <div class="col-5">
                         <h1 class="menu_heading">Antipasti e Insalate</h1>
 
-                        <div class="menu_item1 d-flex">
+                        <div class="menu_item1">
+
 
                             <p>Lorem ipsum dolor <span class="menu_line">
-                                    <div class="line1"></div>
-                                    <div class="line2"></div>
-                                </span>
+                                    <span> <img src="assets/images/line.svg" alt="" srcset="" class="line1">
+                                        <img src="assets/images/line.svg" alt="" srcset="" class="line2">
 
-                                <span>$11.00</span>
+                                    </span>
+
+                                    <span class="menu_price">$11.00</span>
+                            </p>
+                            <p>Lorem ipsum dolor <span class="menu_line">
+                                    <span> <img src="assets/images/line.svg" alt="" srcset="" class="line1">
+                                        <img src="assets/images/line.svg" alt="" srcset="" class="line2">
+
+                                    </span>
+
+                                    <span class="menu_price">$11.00</span>
+                            </p>
+                            <p>Lorem ipsum dolor <span class="menu_line">
+                                    <span> <img src="assets/images/line.svg" alt="" srcset="" class="line1">
+                                        <img src="assets/images/line.svg" alt="" srcset="" class="line2">
+
+                                    </span>
+
+                                    <span class="menu_price">$11.00</span>
+                            </p>
+                            <p>Lorem ipsum dolor <span class="menu_line">
+                                    <span> <img src="assets/images/line.svg" alt="" srcset="" class="line1">
+                                        <img src="assets/images/line.svg" alt="" srcset="" class="line2">
+
+                                    </span>
+
+                                    <span class="menu_price">$11.00</span>
+                            </p>
+                            <p>Lorem ipsum dolor <span class="menu_line">
+                                    <span> <img src="assets/images/line.svg" alt="" srcset="" class="line1">
+                                        <img src="assets/images/line.svg" alt="" srcset="" class="line2">
+
+                                    </span>
+
+                                    <span class="menu_price">$11.00</span>
                             </p>
                         </div>
 
                     </div>
-                    <div class="col-3"></div>
-                    <div class="col-3"></div>
+                    <div class="col-4">
+                        <div class="menu_item2">
+
+
+                            <p>Lorem ipsum dolor <span class="menu_line">
+                                    <span> <img src="assets/images/line.svg" alt="" srcset="" class="line1">
+                                        <img src="assets/images/line.svg" alt="" srcset="" class="line2">
+
+                                    </span>
+
+                                    <span class="menu_price">$11.00</span>
+                            </p>
+                            <p>Lorem ipsum dolor <span class="menu_line">
+                                    <span> <img src="assets/images/line.svg" alt="" srcset="" class="line1">
+                                        <img src="assets/images/line.svg" alt="" srcset="" class="line2">
+
+                                    </span>
+
+                                    <span class="menu_price">$11.00</span>
+                            </p>
+                            <p>Lorem ipsum dolor <span class="menu_line">
+                                    <span> <img src="assets/images/line.svg" alt="" srcset="" class="line1">
+                                        <img src="assets/images/line.svg" alt="" srcset="" class="line2">
+
+                                    </span>
+
+                                    <span class="menu_price">$11.00</span>
+                            </p>
+                            <p>Lorem ipsum dolor <span class="menu_line">
+                                    <span> <img src="assets/images/line.svg" alt="" srcset="" class="line1">
+                                        <img src="assets/images/line.svg" alt="" srcset="" class="line2">
+
+                                    </span>
+
+                                    <span class="menu_price">$11.00</span>
+                            </p>
+                            <p>Lorem ipsum dolor <span class="menu_line">
+                                    <span> <img src="assets/images/line.svg" alt="" srcset="" class="line1">
+                                        <img src="assets/images/line.svg" alt="" srcset="" class="line2">
+
+                                    </span>
+
+                                    <span class="menu_price">$11.00</span>
+                            </p>
+                        </div>
+                    </div>
+                    <div class="col-3">
+                        <div class="right_menu_img">
+
+                            <img src="assets/images/menu_Antipasti.png" alt="" srcset="">
+                        </div>
+                    </div>
                 </div>
 
             </div>
         </div>
     </section>
 
-    <!-- right menu list end -->
+    <!-- right menu list end 1st-->
+
+
+    <!-- left menu list 1st -->
+
+    <section class="left_menu_bg_grey">
+        <div class="row">
+
+
+            <div class="col-lg-10 col-md-10">
+
+                <div class="row">
+                    <div class="col-3">
+                        <div class="right_menu_img">
+
+                            <img src="assets/images/menu_pasta.png" alt="" srcset="">
+                        </div>
+                    </div>
+
+                    <div class="col-5">
+                        <h1 class="menu_heading">Antipasti e Insalate</h1>
+
+                        <div class="menu_item1">
+
+
+                            <p>Lorem ipsum dolor <span class="menu_line">
+                                    <span> <img src="assets/images/line.svg" alt="" srcset="" class="line1">
+                                        <img src="assets/images/line.svg" alt="" srcset="" class="line2">
+
+                                    </span>
+
+                                    <span class="menu_price">$11.00</span>
+                            </p>
+                            <p>Lorem ipsum dolor <span class="menu_line">
+                                    <span> <img src="assets/images/line.svg" alt="" srcset="" class="line1">
+                                        <img src="assets/images/line.svg" alt="" srcset="" class="line2">
+
+                                    </span>
+
+                                    <span class="menu_price">$11.00</span>
+                            </p>
+                            <p>Lorem ipsum dolor <span class="menu_line">
+                                    <span> <img src="assets/images/line.svg" alt="" srcset="" class="line1">
+                                        <img src="assets/images/line.svg" alt="" srcset="" class="line2">
+
+                                    </span>
+
+                                    <span class="menu_price">$11.00</span>
+                            </p>
+                            <p>Lorem ipsum dolor <span class="menu_line">
+                                    <span> <img src="assets/images/line.svg" alt="" srcset="" class="line1">
+                                        <img src="assets/images/line.svg" alt="" srcset="" class="line2">
+
+                                    </span>
+
+                                    <span class="menu_price">$11.00</span>
+                            </p>
+                            <p>Lorem ipsum dolor <span class="menu_line">
+                                    <span> <img src="assets/images/line.svg" alt="" srcset="" class="line1">
+                                        <img src="assets/images/line.svg" alt="" srcset="" class="line2">
+
+                                    </span>
+
+                                    <span class="menu_price">$11.00</span>
+                            </p>
+                        </div>
+
+                    </div>
+                    <div class="col-4">
+                        <div class="menu_item2">
+
+
+                            <p>Lorem ipsum dolor <span class="menu_line">
+                                    <span> <img src="assets/images/line.svg" alt="" srcset="" class="line1">
+                                        <img src="assets/images/line.svg" alt="" srcset="" class="line2">
+
+                                    </span>
+
+                                    <span class="menu_price">$11.00</span>
+                            </p>
+                            <p>Lorem ipsum dolor <span class="menu_line">
+                                    <span> <img src="assets/images/line.svg" alt="" srcset="" class="line1">
+                                        <img src="assets/images/line.svg" alt="" srcset="" class="line2">
+
+                                    </span>
+
+                                    <span class="menu_price">$11.00</span>
+                            </p>
+                            <p>Lorem ipsum dolor <span class="menu_line">
+                                    <span> <img src="assets/images/line.svg" alt="" srcset="" class="line1">
+                                        <img src="assets/images/line.svg" alt="" srcset="" class="line2">
+
+                                    </span>
+
+                                    <span class="menu_price">$11.00</span>
+                            </p>
+                            <p>Lorem ipsum dolor <span class="menu_line">
+                                    <span> <img src="assets/images/line.svg" alt="" srcset="" class="line1">
+                                        <img src="assets/images/line.svg" alt="" srcset="" class="line2">
+
+                                    </span>
+
+                                    <span class="menu_price">$11.00</span>
+                            </p>
+                            <p>Lorem ipsum dolor <span class="menu_line">
+                                    <span> <img src="assets/images/line.svg" alt="" srcset="" class="line1">
+                                        <img src="assets/images/line.svg" alt="" srcset="" class="line2">
+
+                                    </span>
+
+                                    <span class="menu_price">$11.00</span>
+                            </p>
+                        </div>
+                    </div>
+
+                </div>
+
+            </div>
+
+            <div class="col-lg-2 col-md-2">
+
+            </div>
+        </div>
+    </section>
+
+    <!-- left menu list end 1st-->
 
 
 
