--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
   <div class="container-fluid mt-3">
     <div class="top_header">
       <div class="row">
-        <div class="col-lg-4">
+        <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4">
           <div class="header_contact">
             <div class="">
               <img src="assets/images/call-icon.png" alt="" srcset="" />
@@ -52,13 +52,13 @@
           </div>
         </div>
 
-        <div class="col-lg-4">
+        <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4">
           <div class="logo">
             <img src="assets/images/logo.png" alt="" srcset="" />
           </div>
         </div>
 
-        <div class="col-lg-4">
+        <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4">
           <div class="social">
             <img src="assets/images/fb.png" alt="" class="social_icon" />
             <img src="assets/images/instagram.png" alt="" class="social_icon" />
@@ -183,7 +183,7 @@
   <div class="container" data-aos="fade-up" data-aos-duration="700">
     <div class="about_section">
       <div class="row">
-        <div class="col-lg-7 col-md-7">
+        <div class="col-lg-7 col-md-7 col-sm-8">
           <div class="separator">
             <h3>Benvenuti al</h3>
             <div class="line"></div>
@@ -212,7 +212,7 @@
             summer dine in and takeaway evenings.
           </p>
         </div>
-        <div class="col-lg-5 col-md-5">
+        <div class="col-lg-5 col-md-5 col-sm-4">
           <div class="about_img">
             <img src="assets/images/about-pic.png" alt="" />
           </div>
@@ -230,7 +230,7 @@
           </div>
           <div class="pb-5">
             <div class="row">
-              <div class="col-lg-4">
+              <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4">
                 <div class="left_menu">
                   <img src="assets/images/antipasti.png" alt="" srcset="" />
                   <div class="menu_footer1">
@@ -248,7 +248,7 @@
                 </div>
               </div>
 
-              <div class="col-lg-4">
+              <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4">
                 <div class="first_menu">
                   <img src="assets/images/pasta.png" alt="" srcset="" />
                   <div class="menu_footer">
@@ -277,7 +277,7 @@
                 </div>
               </div>
 
-              <div class="col-lg-4">
+              <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4">
                 <div class="first_menu">
                   <img src="assets/images/pizza.png" alt="" srcset="" />
                   <div class="menu_footer">
@@ -318,7 +318,7 @@
     <div class="contact_form">
       <h1 class="contact_heading text-center">Contact Us</h1>
       <div class="row">
-        <div class="col-lg-6 col-md-6">
+        <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
           <img src="assets/images/contact.png" alt="" class="contact_img" />
 
           <div class="form">
@@ -345,11 +345,11 @@
             </div>
           </div>
         </div>
-        <div class="col-lg-6 col-md-6">
+        <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
           <div class="responsive-map">
             <iframe
               src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d13745.581063717123!2d75.95196518019654!3d30.53813470728428!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x391069a660696aef%3A0x3bc789e57615106b!2sChandigarh%2C%20Punjab%20148023!5e0!3m2!1sen!2sin!4v1652896457442!5m2!1sen!2sin"
-              width="550" height="395" style="border: 0" allowfullscreen="" loading="lazy"
+              style="border: 0" allowfullscreen="" loading="lazy" class="map_image"
               referrerpolicy="no-referrer-when-downgrade"></iframe>
           </div>
         </div>
