--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
           </div>
         </div>
 
-        <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4">
+        <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4 header_logo">
           <div class="logo">
             <img src="assets/images/logo.png" alt="" srcset="" />
           </div>
