--- a/menu.html
+++ b/menu.html
@@ -139,11 +139,11 @@
 
             </div>
 
-            <div class="col-lg-10 col-md-10">
+            <div class="col-lg-10 col-md-10 col-sm-12 col-xs-12">
 
                 <div class="row">
 
-                    <div class="col-4">
+                    <div class="col-lg-4 col-md-6 col-sm-12">
                         <h1 class="menu_heading">Antipasti e Insalate</h1>
 
                         <div class="menu_item1">
@@ -216,7 +216,7 @@
                         </div>
 
                     </div>
-                    <div class="col-4">
+                    <div class="col-lg-4 col-md-6 col-sm-12">
                         <div class="menu_item2">
 
                             <div class="menu_content">
@@ -286,7 +286,7 @@
 
                         </div>
                     </div>
-                    <div class="col-4">
+                    <div class="col-lg-4 col-md-12 col-sm-12">
                         <div class="right_menu_img">
 
                             <img src="assets/images/menu_Antipasti.png" alt="" srcset="">
@@ -310,14 +310,14 @@
             <div class="col-lg-10 col-md-10">
 
                 <div class="row">
-                    <div class="col-4">
+                    <div class="col-lg-4 col-md-4 col-sm-12">
                         <div class="right_menu_img">
 
                             <img src="assets/images/menu_pasta.png" alt="" srcset="">
                         </div>
                     </div>
 
-                    <div class="col-4">
+                    <div class="col-lg-4 col-md-4 col-sm-12">
                         <h1 class="menu_heading">Antipasti e Insalate</h1>
 
                         <div class="menu_item1">
@@ -386,7 +386,7 @@
                         </div>
 
                     </div>
-                    <div class="col-4">
+                    <div class="col-lg-4 col-md-4 col-sm-12">
                         <div class="menu_item2">
 
 
@@ -569,10 +569,21 @@
             </div>
             <div class="hr_line"></div>
 
-            <p>
-                Copyright &copy; 2022 Salva D'or Ristorante Italiano. All Rights
-                Reserved
-            </p>
+            <div class="row">
+                <div class="col-8">
+                    <p class="mt-2">
+                        Copyright &copy; 2022 Salva D'or Ristorante Italiano. All Rights
+                        Reserved
+                    </p>
+                </div>
+                <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4">
+                    <div class="social">
+                        <img src="assets/images/fb.png" alt="" class="social_icon" />
+                        <img src="assets/images/instagram.png" alt="" class="social_icon" />
+                        <img src="assets/images/Tripadvisor.png" alt="" class="social_icon" />
+                    </div>
+                </div>
+            </div>
         </footer>
     </div>
 
