--- a/gallery.html
+++ b/gallery.html
@@ -81,7 +81,7 @@
                         <a class="nav-link" href="/index.html">Home <span class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" href="#">About Us</a>
+                        <a class="nav-link " href="about.html">About Us</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">Find Us</a>
@@ -90,10 +90,10 @@
                         <a class="nav-link" href="/menu.html">Menus</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Gallery</a>
+                        <a class="nav-link active" href="gallery.html">Gallery</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Contact Us</a>
+                        <a class="nav-link" href="contact.html">Contact Us</a>
                     </li>
                 </ul>
             </div>
@@ -103,66 +103,54 @@
 
     <!-- header slider  start -->
 
-    <div id="myCarousel" class="carousel slide" data-ride="carousel">
+  
 
-        <div class="carousel-inner">
-            <div class="carousel-item active">
-                <img src="assets/images/banner.png" alt="" />
-                <div class="container menu">
-                    <div class="carousel-caption pb-5">
-                        <h1>Contact Us</h1>
+    <section>
+        <div class="gallery_banner pb-5">
+            <div class="main_item">
+                <img src="assets/images/gallery-slice/banner.png" alt="" />
+                  <div class="container menu">
+                    <div class="carousel-caption">
+                        <h1>Gallery</h1>
 
                     </div>
                 </div>
             </div>
-
-
         </div>
-
-    </div>
+    </section>
 
     <!-- header slider  end here -->
 
   <!-- Gallery start here  -->
 
-  <div class="gallery">
-    <div class="container">
-      <div class="gallery_heading">
-        <h1>Gallery</h1>
-      </div>
+ <section>
+    <div class="container gallery_page">
+        <div class="row">
+            <div class="col-lg-4 col-md-4 firstChildImage">
+                <img src="assets/images/gallery-slice/01.png" alt="" srcset="">
+                 <img src="assets/images/gallery-slice/04.png" alt="" srcset="">
+                  <img src="assets/images/gallery-slice/07.png" alt="" srcset="">
+            </div>
+            <div class="col-lg-4 col-md-4 secondChildImage ">
+                <img src="assets/images/gallery-slice/02.png" alt="" srcset="">
+                <img src="assets/images/gallery-slice/05.png" alt="" srcset="">
+                <img src="assets/images/gallery-slice/08.png" alt="" srcset="">
 
-      <div class="gallery_section">
-        <div class="row">
-          <div class="col-lg-3 col-md-3">
-            <img src="assets/images/pic-1.png" alt="" />
-          </div>
-          <div class="col-lg-3 col-md-3">
-            <img src="assets/images/pic-2.png" alt="" />
-          </div>
-          <div class="col-lg-3 col-md-3">
-            <img src="assets/images/pic-3.png" alt="" />
-          </div>
-          <div class="col-lg-3 col-md-3">
-            <img src="assets/images/pic-4.png" alt="" />
-          </div>
+            </div>
+            <div class="col-lg-4 col-md-4 thirdChildImage">
+                 <img src="assets/images/gallery-slice/03.png" alt="" srcset="">
+                 <img src="assets/images/gallery-slice/06.png" alt="" srcset="">
+                 <img src="assets/images/gallery-slice/09.png" alt="" srcset="">
+            </div>
         </div>
-        <div class="row">
-          <div class="col-lg-3 col-md-3 gallery_bottom_img">
-            <img src="assets/images/pic-5.png" alt="" />
-          </div>
-          <div class="col-lg-3 col-md-3 gallery_center_img">
-            <img src="assets/images/pic-6.png" alt="" />
-          </div>
-          <div class="col-lg-3 col-md-3 gallery_bottom_img">
-            <img src="assets/images/pic-7.png " alt="" />
-          </div>
-          <div class="col-lg-3 col-md-3 gallery_center_img">
-            <img src="assets/images/pic-8.png" alt="" />
-          </div>
+
+        <div class="text-center pb-5">
+            <a href="/menu.html"class="view_menu_btn" >View Full Menus</a>
+        
         </div>
-      </div>
+
     </div>
-  </div>
+ </section>
 
   <!-- Gallery end here  -->
 
