--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
       <div class="container">
         <ul class="navbar-nav mr-auto">
           <li class="nav-item">
-            <a class="nav-link active" href="/index.html">Home <span class="sr-only">(current)</span></a>
+            <a class="nav-link active" href="/">Home <span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="about.html">About Us</a>
