--- a/menu.html
+++ b/menu.html
@@ -83,22 +83,22 @@
             <div class="container">
                 <ul class="navbar-nav mr-auto">
                     <li class="nav-item">
-                        <a class="nav-link " href="/index.html">Home <span class="sr-only">(current)</span></a>
+                        <a class="nav-link " href="/">Home <span class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">About Us</a>
+                        <a class="nav-link" href="about.html">About Us</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">Find Us</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" href="#">Menus</a>
+                        <a class="nav-link active" href="menu.html">Menus</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Gallery</a>
+                        <a class="nav-link" href="gallery.html">Gallery</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Contact Us</a>
+                        <a class="nav-link" href="contact.html">Contact Us</a>
                     </li>
                 </ul>
             </div>
