gallery res done

--- a/gallery.html
+++ b/gallery.html
@@ -106,7 +106,7 @@
   
 
     <section>
-        <div class="gallery_banner pb-5">
+        <div class="gallery_banner">
             <div class="main_item">
                 <img src="assets/images/gallery-slice/banner.png" alt="" />
                   <div class="container menu">
