--- a/about.html
+++ b/about.html
@@ -107,33 +107,30 @@
 
       <!-- header slider  start -->
 
-    <div id="myCarousel" class="carousel slide" data-ride="carousel">
-
-        <div class="carousel-inner">
-            <div class="carousel-item active">
-                <img src="assets/images/banner.png" alt="" />
-                <div class="container menu">
-                    <div class="carousel-caption pb-5">
+  
+    <section>
+        <div class="gallery_banner">
+            <div class="main_item">
+                <img src="assets/images/about-slice/banner.png" alt="" />
+                  <div class="container menu">
+                    <div class="carousel-caption">
                         <h1>About Us</h1>
 
                     </div>
                 </div>
             </div>
-
-
         </div>
-
-    </div>
+    </section>
 
     <!-- header slider  end here -->
  <!-- About us start here -->
 
   <div class="container" data-aos="fade-up" data-aos-duration="700">
-    <div class="about_section">
+    <div class="about_section about_page">
       <div class="row">
          <div class="col-lg-5 col-md-5 col-sm-4">
           <div class="about_img">
-            <img src="assets/images/about-pic.png" alt="" />
+            <img src="assets/images/about-slice/about-pic.png" alt="" />
           </div>
         </div>
         <div class="col-lg-7 col-md-7 col-sm-8">
