--- a/menu.html
+++ b/menu.html
@@ -109,24 +109,19 @@
 
     <!-- header slider  start -->
 
-    <div id="myCarousel" class="carousel slide" data-ride="carousel">
-
-        <div class="carousel-inner">
-            <div class="carousel-item active">
-                <img src="assets/images/menu_banner.png" alt="" />
-                <div class="container menu">
-                    <div class="carousel-caption pb-5">
+   <section>
+        <div class="gallery_banner">
+            <div class="main_item">
+                <img src="assets/images/menu_page_banner.png" alt="" />
+                  <div class="container menu">
+                    <div class="carousel-caption">
                         <h1>Menus</h1>
 
                     </div>
                 </div>
             </div>
-
-
         </div>
-
-    </div>
-
+    </section>
     <!-- header slider  end here -->
 
 
