page animation done

--- a/contact.html
+++ b/contact.html
@@ -101,47 +101,67 @@
     </nav>
 
 
-    <!-- header slider  start -->
-
-    <div id="myCarousel" class="carousel slide" data-ride="carousel">
-
-        <div class="carousel-inner">
-            <div class="carousel-item active">
-                <img src="assets/images/banner.png" alt="" />
+    <section>
+        <div class="gallery_banner">
+            <div class="main_item">
+                <img src="assets/images/contact-us-slice/banner.png" alt="" />
                 <div class="container menu">
-                    <div class="carousel-caption pb-5">
+                    <div class="carousel-caption">
                         <h1>Contact Us</h1>
 
                     </div>
                 </div>
             </div>
-
-
         </div>
+    </section>
 
-    </div>
 
-    <!-- header slider  end here -->
-
+    <!-- contact form -->
 
     <section>
-        <div class="container">
+        <div class="container pb-4">
             <h1 class="contact_heading text-center">Get in Touch</h1>
-            <div class="contact_form pt-4 pb-4">
+            <div class="contact_page contact_form  pt-4">
 
 
                 <div class="row">
                     <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
-<div class="contact_left">
-  <div class="icon">icon</div>
-                      <div class="content">
-                        Lorem ipsum dolor
-                      </div>
-</div>
-                    
+                        <div class="contact_left">
+                            <div class="contact_icon">
+                                <img src="assets/images/contact-us-slice/address-icon.png" alt="" srcset="">
+                                <img src="assets/images/contact-us-slice/phone.png" alt="" srcset="">
+                                <img src="assets/images/contact-us-slice/email.png" alt="" srcset="">
+                                <img src="assets/images/contact-us-slice/time.png" alt="" srcset="">
+                            </div>
+                            <div class="content">
+                                <div class="contact_address">
+                                    <h5 class="title">Address</h5>
+                                    <p> Salva D'or Italian Restaurant & Pizzeria 350 Cameron Road,
+                                        Tauranga 3110, New Zealand</p>
+                                </div>
+                                <div class="contact_address">
+                                    <h5 class="title">Phone</h5>
+                                    <p>075788000</p>
+                                </div>
+                                <div class="contact_address">
+                                    <h5 class="title">Email</h5>
+                                    <p>restaurant@salvador.co.nz</p>
+                                </div>
+                                <div class="contact_address">
+                                    <h5 class="title">Opening Hours</h5>
+                                    <p>
+                                        Tuesday-Sunday
 
+                                        5:00pm - Till Late
 
+                                        Monday-Closed
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
                     </div>
+
+
                     <div class="col-lg-4 col-md-4 col-sm-12 ">
                         <div class="">
                             <div class="form-group">
@@ -167,10 +187,10 @@
                                 <input type="phoneNumber" class="form-control" id="phoneNumber" placeholder="Phone" />
                             </div>
 
-
-                            <div class="text-center">
-                                <button>Submit</button>
+                            <div class="text-center submit_form">
+                                <a href="#" class="contact_submit_btn">Submit</a>
                             </div>
+
                         </div>
                     </div>
                     <div class="col-lg-4 col-md-4 col-sm-12 ">
@@ -180,8 +200,27 @@
                                 placeholder="Message"></textarea>
                         </div>
                     </div>
+
+
+
+
+
+
+
                 </div>
+
+
+
             </div>
+        </div>
+    </section>
+
+    <section>
+        <div class="full_map">
+            <iframe
+                src="https://www.google.com/maps/embed?pb=!1m23!1m12!1m3!1d101031.07821798697!2d176.09467138041967!3d-37.69100398812802!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!4m8!3e6!4m0!4m5!1s0x6d6ddbc528d90de5%3A0xaf3522f351cfbc68!2sSalva%20D&#39;or%20Italian%20Restaurant%20%26%20Pizzeria%20350%20Cameron%20Road%2C%20Tauranga%203110%2C%20New%20Zealand!3m2!1d-37.6910247!2d176.1647114!5e0!3m2!1sen!2sin!4v1655633050994!5m2!1sen!2sin"
+                width="100%" style="border:0;" allowfullscreen="" loading="lazy"
+                referrerpolicy="no-referrer-when-downgrade" class="full_map_frame"></iframe>
         </div>
     </section>
 
