--- a/gallery.html
+++ b/gallery.html
@@ -103,13 +103,13 @@
 
     <!-- header slider  start -->
 
-  
+
 
     <section>
         <div class="gallery_banner">
             <div class="main_item">
                 <img src="assets/images/gallery-slice/banner.png" alt="" />
-                  <div class="container menu">
+                <div class="container menu">
                     <div class="carousel-caption">
                         <h1>Gallery</h1>
 
@@ -121,38 +121,41 @@
 
     <!-- header slider  end here -->
 
-  <!-- Gallery start here  -->
+    <!-- Gallery start here  -->
 
- <section>
-    <div class="container gallery_page">
-        <div class="row">
-            <div class="col-lg-4 col-md-4 firstChildImage">
-                <img src="assets/images/gallery-slice/01.png" alt="" srcset="">
-                 <img src="assets/images/gallery-slice/04.png" alt="" srcset="">
-                  <img src="assets/images/gallery-slice/07.png" alt="" srcset="">
+    <section>
+        <div class="container gallery_page">
+            <div class="row">
+                <div class="col-lg-4 col-md-4 firstChildImage" data-aos="zoom-in-up" duration="600" ,
+                    easing='ease-in-sine' data-aos-delay="500">
+                    <img src="assets/images/gallery-slice/01.png" alt="" srcset="" data-aos="zoom-in-left">
+                    <img src="assets/images/gallery-slice/04.png" alt="" srcset="" data-aos="zoom-out-right">
+                    <img src="assets/images/gallery-slice/07.png" alt="" srcset="" data-aos="fade-down-left">
+                </div>
+                <div class="col-lg-4 col-md-4 secondChildImage " data-aos="zoom-in-up" duration="600" ,
+                    easing='ease-in-sine' data-aos-delay="500">
+                    <img src="assets/images/gallery-slice/02.png" alt="" srcset="" data-aos="fade-down-left">
+                    <img src="assets/images/gallery-slice/05.png" alt="" srcset="" data-aos="zoom-in-left">
+                    <img src="assets/images/gallery-slice/08.png" alt="" srcset="" data-aos="zoom-out-right">
+
+                </div>
+                <div class="col-lg-4 col-md-4 thirdChildImage" data-aos="zoom-in-up" duration="600" ,
+                    easing='ease-in-sine' data-aos-delay="500">
+                    <img src="assets/images/gallery-slice/03.png" alt="" srcset="" data-aos="zoom-out-right">
+                    <img src="assets/images/gallery-slice/06.png" alt="" srcset="" data-aos="fade-down-left">
+                    <img src="assets/images/gallery-slice/09.png" alt="" srcset="" data-aos="zoom-in-left">
+                </div>
             </div>
-            <div class="col-lg-4 col-md-4 secondChildImage ">
-                <img src="assets/images/gallery-slice/02.png" alt="" srcset="">
-                <img src="assets/images/gallery-slice/05.png" alt="" srcset="">
-                <img src="assets/images/gallery-slice/08.png" alt="" srcset="">
+
+            <div class="text-center pb-5">
+                <a href="/menu.html" class="view_menu_btn">View Full Menus</a>
 
             </div>
-            <div class="col-lg-4 col-md-4 thirdChildImage">
-                 <img src="assets/images/gallery-slice/03.png" alt="" srcset="">
-                 <img src="assets/images/gallery-slice/06.png" alt="" srcset="">
-                 <img src="assets/images/gallery-slice/09.png" alt="" srcset="">
-            </div>
+
         </div>
+    </section>
 
-        <div class="text-center pb-5">
-            <a href="/menu.html"class="view_menu_btn" >View Full Menus</a>
-        
-        </div>
-
-    </div>
- </section>
-
-  <!-- Gallery end here  -->
+    <!-- Gallery end here  -->
 
 
     <!-- Footer start -->
