--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
             <a class="nav-link" href="about.html">About Us</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Find Us</a>
+            <a class="nav-link" href="#contact_form">Find Us</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="/menu.html">Menus</a>
@@ -119,14 +119,11 @@
         <img src="assets/images/banner.png" alt="" />
         <div class="container">
           <div class="carousel-caption">
-            <h1>Loved By Locals Since 2013</h1>
+            <h1 data-aos="fade-right" data-aos-anchor-placement="top-bottom" offset=" 200" duration="600"
+              easing="ease-in-sine"' ,>Loved By Locals Since 2013</h1>
+
             <p>
-              Cras justo odio, dapibus ac facilisis in, egestas eget quam.
-              Donec id elit non mi porta gravida at eget metus. Nullam id
-              dolor id nibh ultricies vehicula ut id elit.
-            </p>
-            <p>
-              <a class="btn btn-lg btn-primary" href="#" role="button">Sign up today</a>
+              <a class="banner_view_menu_btn" href="/menu.html" role="button">View Full Menus</a>
             </p>
           </div>
         </div>
@@ -136,14 +133,12 @@
 
         <div class="container">
           <div class="carousel-caption">
-            <h1>Another example headline.</h1>
+            <h1 data-aos="fade-right" data-aos-anchor-placement="top-bottom" offset=" 200" duration="600"
+              easing="ease-in" >From Italy, With Love</h1>
+
             <p>
-              Cras justo odio, dapibus ac facilisis in, egestas eget quam.
-              Donec id elit non mi porta gravida at eget metus. Nullam id
-              dolor id nibh ultricies vehicula ut id elit.
-            </p>
-            <p>
-              <a class="btn btn-lg btn-primary" href="#" role="button">Learn more</a>
+              <a class="banner_view_menu_btn" href="/menu.html" role="button">View Full Menus</a>
+
             </p>
           </div>
         </div>
@@ -153,15 +148,13 @@
 
         <div class="container">
           <div class="carousel-caption">
-            <h1>One more for good measure.</h1>
-            <p>
-              Cras justo odio, dapibus ac facilisis in, egestas eget quam.
-              Donec id elit non mi porta gravida at eget metus. Nullam id
-              dolor id nibh ultricies vehicula ut id elit.
-            </p>
-            <p>
-              <a class="btn btn-lg btn-primary" href="#" role="button">Browse gallery</a>
-            </p>
+            <h1 data-aos="fade-right" data-aos-anchor-placement="top-bottom" offset=" 200" duration="600"
+              easing="ease-in"  >We' re Always In The Mood For Food</h1>
+
+              <p>
+                <a class="banner_view_menu_btn" href="/menu.html" role="button">View Full Menus</a>
+
+              </p>
           </div>
         </div>
       </div>
@@ -232,7 +225,9 @@
             <div class="row">
               <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4">
                 <div class="left_menu">
-                  <img src="assets/images/antipasti.png" alt="" srcset="" class="left_menu_img" />
+                  <img src="assets/images/antipasti.png" alt="" srcset="" class="left_menu_img" data-aos="zoom-in"
+                    data-aos="fade-up" data-aos-anchor-placement="top-bottom" offset=" 200" duration="600"
+                    easing="ease-in">
                   <div class="menu_footer1">
                     <div class="row">
                       <div class="col-10">
@@ -240,7 +235,9 @@
                       </div>
                       <div class="col-2">
                         <div class="arrow_div">
-                          <img src="assets/images/arrow1.png" class="arrow" alt="" />
+                          <a href="/menu.html">
+                            <img src="assets/images/arrow1.png" class="arrow" alt="" />
+                          </a>
                         </div>
                       </div>
                     </div>
@@ -250,27 +247,37 @@
 
               <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4">
                 <div class="first_menu">
-                  <img src="assets/images/pasta.png" alt="" srcset="" />
+                  <img src="assets/images/pasta.png" alt="" srcset="" data-aos="zoom-out" data-aos="fade-up"
+                    data-aos-anchor-placement="top-bottom" offset=" 200" duration="700" easing="ease-in" />
                   <div class="menu_footer">
                     <div class="col-10">
                       <p class="title">Pasta e Risotto</p>
                     </div>
                     <div class="col-2">
                       <div class="arrow_div">
-                        <img src="assets/images/arrow1.png" class="arrow1" alt="" />
+                        <a href="/menu.html">
+
+
+                          <img src="assets/images/arrow1.png" class="arrow1" alt="" />
+                        </a>
                       </div>
                     </div>
                   </div>
                 </div>
                 <div class="second_menu">
-                  <img src="assets/images/secondi.png" alt="" srcset="" />
+                  <img src="assets/images/secondi.png" alt="" srcset="" data-aos="zoom-in" data-aos="fade-up"
+                    data-aos-anchor-placement="top-bottom" offset=" 200" duration="800" easing="ease-in" />
                   <div class="menu_footer">
                     <div class="col-10">
                       <p class="title">Secondi Piatti</p>
                     </div>
                     <div class="col-2">
                       <div class="arrow_div">
-                        <img src="assets/images/arrow1.png" class="arrow1" alt="" />
+                        <a href="/menu.html">
+
+
+                          <img src="assets/images/arrow1.png" class="arrow1" alt="" />
+                        </a>
                       </div>
                     </div>
                   </div>
@@ -279,27 +286,37 @@
 
               <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4">
                 <div class="first_menu">
-                  <img src="assets/images/pizza.png" alt="" srcset="" />
+                  <img src="assets/images/pizza.png" alt="" srcset="" data-aos="fade-up" data-aos="fade-up"
+                    data-aos-anchor-placement="top-bottom" offset=" 200" duration="900" easing="ease-in" />
                   <div class="menu_footer">
                     <div class="col-10">
                       <p class="title">Pizza</p>
                     </div>
                     <div class="col-2">
                       <div class="arrow_div">
-                        <img src="assets/images/arrow1.png" class="arrow1" alt="" />
+                        <a href="/menu.html">
+
+
+                          <img src="assets/images/arrow1.png" class="arrow1" alt="" />
+                        </a>
                       </div>
                     </div>
                   </div>
                 </div>
                 <div class="second_menu">
-                  <img src="assets/images/dolci.png" alt="" srcset="" />
+                  <img src="assets/images/dolci.png" alt="" srcset="" data-aos="fade-flip" data-aos="fade-up"
+                    data-aos-anchor-placement="top-bottom" offset=" 200" duration="600" easing="ease-in" />
                   <div class="menu_footer">
                     <div class="col-10">
                       <p class="title">Dolci</p>
                     </div>
                     <div class="col-2">
                       <div class="arrow_div">
-                        <img src="assets/images/arrow1.png" class="arrow1" alt="" />
+                        <a href="/menu.html">
+
+
+                          <img src="assets/images/arrow1.png" class="arrow1" alt="" />
+                        </a>
                       </div>
                     </div>
                   </div>
@@ -314,8 +331,8 @@
 
   <!-- Contact us start here -->
 
-  <div class="container mt-3">
-    <div class="contact_form">
+  <div class="container mt-3" data-aos="fade-up">
+    <div class="contact_form " id="contact_form">
       <h1 class="contact_heading text-center">Contact Us</h1>
       <div class="row">
         <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
@@ -346,12 +363,19 @@
           </div>
         </div>
         <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
-          <div class="responsive-map">
+
+          <div class="full_map">
+            <iframe
+              src="https://www.google.com/maps/embed?pb=!1m23!1m12!1m3!1d101031.07821798697!2d176.09467138041967!3d-37.69100398812802!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!4m8!3e6!4m0!4m5!1s0x6d6ddbc528d90de5%3A0xaf3522f351cfbc68!2sSalva%20D&#39;or%20Italian%20Restaurant%20%26%20Pizzeria%20350%20Cameron%20Road%2C%20Tauranga%203110%2C%20New%20Zealand!3m2!1d-37.6910247!2d176.1647114!5e0!3m2!1sen!2sin!4v1655633050994!5m2!1sen!2sin"
+              width="100%" style="border:0;" allowfullscreen="" loading="lazy"
+              referrerpolicy="no-referrer-when-downgrade" class="main_full_map_frame"></iframe>
+          </div>
+          <!-- <div class="responsive-map">
             <iframe
               src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d13745.581063717123!2d75.95196518019654!3d30.53813470728428!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x391069a660696aef%3A0x3bc789e57615106b!2sChandigarh%2C%20Punjab%20148023!5e0!3m2!1sen!2sin!4v1652896457442!5m2!1sen!2sin"
               style="border: 0" allowfullscreen="" loading="lazy" class="map_image"
               referrerpolicy="no-referrer-when-downgrade"></iframe>
-          </div>
+          </div> -->
         </div>
       </div>
     </div>
@@ -700,30 +724,38 @@
 
       <div class="gallery_section">
         <div class="row">
-          <div class="col-lg-3 col-md-3">
+          <div class="col-lg-3 col-md-3" data-aos="zoom-in-up" duration="600" , easing='ease-in-sine'
+            data-aos-delay="500">
             <img src="assets/images/pic-1.png" alt="" />
           </div>
-          <div class="col-lg-3 col-md-3">
+          <div class="col-lg-3 col-md-3" data-aos="zoom-in-up" duration="600" , easing='ease-in-sine'
+            data-aos-delay="600">
             <img src="assets/images/pic-2.png" alt="" />
           </div>
-          <div class="col-lg-3 col-md-3">
+          <div class="col-lg-3 col-md-3" data-aos="zoom-in-up" duration="600" , easing='ease-in-sine'
+            data-aos-delay="700">
             <img src="assets/images/pic-3.png" alt="" />
           </div>
-          <div class="col-lg-3 col-md-3">
+          <div class="col-lg-3 col-md-3" data-aos="zoom-in-up" duration="600" , easing='ease-in-sine'
+            data-aos-delay="300">
             <img src="assets/images/pic-4.png" alt="" />
           </div>
         </div>
         <div class="row">
-          <div class="col-lg-3 col-md-3 gallery_bottom_img">
+          <div class="col-lg-3 col-md-3 gallery_bottom_img" data-aos="zoom-in-up" duration="600" , easing='ease-in-sine'
+            data-aos-delay="800">
             <img src="assets/images/pic-5.png" alt="" />
           </div>
-          <div class="col-lg-3 col-md-3 gallery_center_img">
+          <div class="col-lg-3 col-md-3 gallery_center_img" data-aos="zoom-in-up" duration="600" , easing='ease-in-sine'
+            data-aos-delay="1000">
             <img src="assets/images/pic-6.png" alt="" />
           </div>
-          <div class="col-lg-3 col-md-3 gallery_bottom_img">
+          <div class="col-lg-3 col-md-3 gallery_bottom_img" data-aos="zoom-in-up" duration="600" , easing='ease-in-sine'
+            data-aos-delay="900">
             <img src="assets/images/pic-7.png " alt="" />
           </div>
-          <div class="col-lg-3 col-md-3 gallery_center_img">
+          <div class="col-lg-3 col-md-3 gallery_center_img" data-aos="zoom-in-up" duration="600" , easing='ease-in-sine'
+            data-aos-delay="100">
             <img src="assets/images/pic-8.png" alt="" />
           </div>
         </div>
